# webr

./: .envrc  .gitignore  Cargo.toml  default.nix  flake.nix
.github/: dependabot.yml
.github/workflows/: build_flake.yml
src/: app_state.rs  error.rs  lectionary.rs  lib.rs  markdown.rs  prelude.rs
src/templates/: mod.rs
src/utils/: html.rs  iterator.rs  mod.rs  path.rs
templates/: page.html  pic_grid.html
