[package]
name = "webr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "webr"
path = "src/lib.rs"

[[bin]]
name = "webr"
path = "src/bin/main.rs"

[dependencies]
thiserror = "1"
axum = { version = "0.7.2", features = ["macros"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "fs"] }
pulldown-cmark = "0.9.3"
pulldown-cmark-frontmatter = "0.2.0"
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
askama = "0.12.1"
tower = "0.4.13"
tokio-util = { version = "0.7.10", features = ["io"] }
convert_case = "0.6.0"
tokio-stream = { version = "0.1.14", features = ["fs"] }
time = { version = "0.3.31", features = ["macros", "formatting"] }
tracing = "0.1.40"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing-subscriber = "0.3.18"
natord = "1.0.9"
html = "0.6.3"
clap = { version = "4.4.14", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
