[package]
name = "webr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "webr"
path = "src/lib.rs"

[[bin]]
name = "webr"
path = "src/bin/main.rs"

[dependencies]
thiserror = "2"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
pulldown-cmark = "0.13"
pulldown-cmark-frontmatter = "0.4"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
askama = "0.14"
tower = "0.5"
tokio-util = { version = "0.7", features = ["io"] }
convert_case = "0.8"
tokio-stream = { version = "0.1", features = ["fs"] }
time = { version = "0.3", features = ["macros", "formatting"] }
tracing = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = "0.3"
natord = "1"
html = "0.6"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
